traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:11: error: not found: value a
      setPos(diag-a,diag-a)
                  ^TraversalDiagonal:11: error: not found: value a
      setPos(diag-a,diag-a)
                         ^